# MEDS-DEV

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.md  README.md  conftest.py  pyproject.toml  run_experiments.sh  tasks.json
.github/ISSUE_TEMPLATE/: benchmark-result.yml
.github/actions/install-meds-dev/: action.yaml
.github/scripts/: select_test_scope.py
.github/workflows/: aggregate_benchmark_results.yaml  code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  regenerate_entities.yaml  tests.yaml  upload_benchmark_result.yaml
_results/197/: result.json
_results/199/: result.json
_results/200/: result.json
_results/214/: result.json
_results/215/: result.json
_results/216/: result.json
_results/217/: result.json
_results/218/: result.json
_results/219/: result.json
_results/220/: result.json
_results/221/: result.json
_results/222/: result.json
_results/223/: result.json
_results/224/: result.json
_results/225/: result.json
_results/226/: result.json
_results/227/: result.json
_results/228/: result.json
_results/229/: result.json
_results/230/: result.json
_results/231/: result.json
_results/232/: result.json
_results/233/: result.json
_results/234/: result.json
_results/235/: result.json
_results/255/: result.json
_results/256/: result.json
_results/257/: result.json
_results/259/: result.json
_results/260/: result.json
_results/261/: result.json
_results/262/: result.json
entities/: datasets.json  models.json  tasks.json
results/: all_results.json
scripts/: aggregate_results.py
src/MEDS_DEV/: __init__.py  utils.py
src/MEDS_DEV/datasets/: __init__.py  __main__.py
src/MEDS_DEV/datasets/AUMCdb/: dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/datasets/EHRShot/: README.md  dataset.yaml  predicates.yaml
src/MEDS_DEV/datasets/HIRID/: README.md  dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/datasets/INSPIRE/: README.md  dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/datasets/MIMIC-IV/: README.md  dataset.yaml  predicates.yaml  requirements.txt
src/MEDS_DEV/datasets/NWICU/: README.md  dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/datasets/SICdb/: README.md  dataset.yaml  predicates.yaml  refs.bib  requirements.txt
src/MEDS_DEV/evaluation/: __main__.py
src/MEDS_DEV/models/: __init__.py  __main__.py
src/MEDS_DEV/results/: __init__.py  __main__.py
src/MEDS_DEV/tasks/: __init__.py  __main__.py
src/MEDS_DEV/web/: README.md  __init__.py  aggregate_results.py  collate_entities.py  process_submission.py
templates/: dataset.md  model.md  results.md
tests/: conftest.py  test_0_datasets.py  test_1_tasks.py  test_1_unsupervised_models.py  test_2_supervised_models.py  test_3_evaluation.py  test_4_result_packaging.py  test_registry_validation.py  test_web.py  utils.py
(+44 files in other folders)
