[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MEDS_DEV"
dynamic = ["version"]
authors = [
    {name="Matthew B. A. McDermott", email="matthew_mcdermott@hms.harvard.edu"},
    {name="Ethan Steinberg", email="ethanid@stanford.edu"},
    {name="Shalmali Joshi", email="shalmali.joshi@columbia.edu"},
    {name="Teya S. Bergamaschi", email="teya@mit.edu"},
    {name="Nassim Oufattole"},
    {name="Aleksia Kolo", email="aleksiak@mit.edu"},
    {name="Young Sang Choi", email="young.sang.choi@columbia.edu"},
    {name="Chao Pang", email="cp3016@cumc.columbia.edu"},
    {name="Kamil\u0117 Stankevi\u010di\u016bt\u0117", email="kamile.stankeviciute@cst.cam.ac.uk"},
    {name="Vincent Jeanselme", email="vincent.jeanselme@mrc-bsu.cam.ac.uk"},
    {name="Justin Xu", email="justin.xu@ndm.ox.ac.uk"}
]


description = "Task configuration and helper files for the MEDS-DEV Benchmark"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "meds==0.3.3", "es-aces==0.6.1", "hydra-core", "meds-evaluation==0.0.3", "validators",
    "bibtexparser"
]

[tool.setuptools_scm]

[tool.coverage.report]
omit = ["*/models/cehrbert/*"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[project.optional-dependencies]
dev = ["pre-commit<4", "ruff"]
tests = ["pytest", "pytest-cov", "meds_testing_helpers", "pretty-print-directory", "yaml_to_disk>=0.0.3"]

[project.scripts]
meds-dev-dataset = "MEDS_DEV.datasets.__main__:main"
meds-dev-task = "MEDS_DEV.tasks.__main__:main"
meds-dev-model = "MEDS_DEV.models.__main__:main"
meds-dev-evaluation = "MEDS_DEV.evaluation.__main__:main"
meds-dev-pack-result = "MEDS_DEV.results.__main__:pack_result"
meds-dev-validate-result = "MEDS_DEV.results.__main__:validate_result"

[project.urls]
Homepage = "https://github.com/Medical-Event-Data-Standard/MEDS-DEV"
Issues = "https://github.com/Medical-Event-Data-Standard/MEDS-DEV/issues"

[tool.ruff]
target-version = "py311"
line-length = 110
extend-exclude = []

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*MEDS*"]  # Ignore MEDS in variable names
